--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,9 @@ packages = [{include = "getcontext"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-azure-core = "^1.26.4"
-msrest = "^0.7.1"
-azure-mgmt-core = "^1.4.0"
+azure-core = "<2.0.0"
+msrest = "<1.0.0"
+azure-mgmt-core = "<2.0.0"
 aiohttp = "^3.8.4"
 
 [build-system]
