--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "context-python"
-version = "0.7.0"
+version = "0.8.0"
 description = "Python SDK for the Context API"
-authors = ["Alex Gamble <alex@context.ai>"]
+authors = ["Alex Gamble <alex@context.ai>", "Alec Barber <alec@context.ai>", "Amisha Singh <amisha@context.ai>"]
 readme = "README.md"
 license = "LICENSE.md"
 keywords = ["context", "api", "sdk"]
