--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ azure-core = "<2.0.0"
 msrest = "<1.0.0"
 azure-mgmt-core = "<2.0.0"
 aiohttp = "^3.8.4"
+langsmith = "0.1.48"
 
 [build-system]
 requires = ["poetry-core"]
