--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,4 +41,4 @@ jobs:
       run: poetry install
     - name: Test with python
       run: |
-        python3 -m unittest discover tests
+        poetry run python -m unittest discover tests
