--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,6 +13,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      GETCONTEXT_TOKEN: ${{ secrets.GETCONTEXT_TOKEN }}
     strategy:
       fail-fast: false
       matrix:
