--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,9 @@ langsmith = ">= 0.1.3, <= 0.1.49"
 
 [tool.poetry.group.dev.dependencies]
 openai = "*"
-faiss-cpu = "*"
-langchain = "*"
-langchain-openai = "*"
+faiss-cpu = "1.8.0"
+langchain = "0.1.17"
+langchain-openai = "0.1.6"
 
 [build-system]
 requires = ["poetry-core"]
